[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI/Icon/golden_chest.tres" type="Texture" id=1]
[ext_resource path="res://Scripts/Props/WinningChest.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/PropNotifier/Exclamation.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "chest_open"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="RayShape2D" id=3]

[node name="WinningChest" type="StaticBody2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 2 )
chest_key = "STAGE_2"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/chest_open = SubResource( 2 )

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 3 )

[node name="Exclamation" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = -0.75
margin_top = -18.75
margin_right = -0.75
margin_bottom = -18.75
rect_scale = Vector2( 0.25, 0.25 )
[connection signal="tree_exiting" from="." to="." method="_on_WinningChest_tree_exiting"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
